<resources>
    <string name="app_name">SleepWell</string>
    <string name="home">HOME</string>
    <string name="connect">CONNECT</string>
    <string name="profile">PROFILE</string>
    <string name="logout">LOGOUT</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="no_account">No account?</string>
    <string name="signup_here">Signup Here</string>
    <string name="enter_your_details">Enter your Details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here">Login Here</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="verify">VERIFY</string>
    <string name="music">Music</string>
    <string name="massage">Massage</string>
    <string name="temperature">Temperature</string>
    <string name="body_temperature">Body Temperature</string>
    <string name="_0">0</string>
    <string name="temperature_in_c">Temperature in °C</string>
    <string name="hh_mm_ss">HH:MM:SS</string>
    <string name="new_password">New Password</string>
    <string name="submit">Submit</string>
    <string name="todo">TODO</string>
    <string name="devices">Devices</string>
    <string name="updates">UPDATES</string>
    <string name="unknown"><![CDATA[<unknown>]]></string>
    <string name="status"><![CDATA[<status>]]></string>
</resources>