<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/connect"
        android:icon="@drawable/baseline_bluetooth_24"
        android:title="@string/connect"/>
    <item
        android:id="@+id/profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile"/>
    <item
        android:id="@+id/help"
        android:icon="@drawable/baseline_info_24"
        android:title="@string/help"/>
    <item
        android:id="@+id/logout"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/logout"/>

</menu>