<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Signup">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:text="@string/enter_your_details"
                android:textColor="#2B2A2A"
                android:textSize="25sp"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                app:boxBackgroundMode="none"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/text_box_effect2"
                    android:hint="@string/first_name"
                    android:padding="0dp"
                    android:textColor="#000000"
                    android:textColorHint="#68000000" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                app:boxBackgroundMode="none"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/text_box_effect2"
                    android:hint="@string/last_name"
                    android:padding="0dp"
                    android:textColor="#000000"
                    android:textColorHint="#68000000" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                app:boxBackgroundMode="none"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/text_box_effect2"
                    android:hint="@string/mobile_number"
                    android:padding="0dp"
                    android:textColor="#000000"
                    android:textColorHint="#68000000" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                app:boxBackgroundMode="none"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/text_box_effect2"
                    android:hint="@string/email"
                    android:padding="0dp"
                    android:textColor="#000000"
                    android:textColorHint="#68000000" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#00A4D0">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/text_box_effect2"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="0dp"
                    android:textColor="#000000"
                    android:textColorHint="#68000000" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout_2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#00A4D0">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/text_box_effect2"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="0dp"
                    android:textColor="#000000"
                    android:textColorHint="#68000000" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signup_bttn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/ripple_effect"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/login_bttn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/login_here"
                    android:textColor="#00A4D0"
                    android:textSize="13sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/signUpProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="#00A4D0"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>