<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFDEDE"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="@drawable/newback"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/backgroud_color"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/nick_pillow"
            tools:ignore="ContentDescription" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:boxBackgroundMode="none"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/text_box_effect2"
                android:hint="@string/email"
                android:padding="0dp"
                android:textColor="#000000"
                android:textColorHint="#68000000" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#00A4D0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/text_box_effect2"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="0dp"
                android:textColor="#000000"
                android:textColorHint="#68000000" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:text="@string/forgot_password"
            android:textColor="#00A5D1"
            android:textSize="13sp"
            android:textStyle="italic" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_bttn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/ripple_effect"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/sign_up_bttn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/signup_here"
                android:textColor="#00A4D0"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/signInProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="#00A4D0"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>